@@ -389,7 +389,7 @@ class CLineGraphDraw extends CGraphDraw {
 			}
 		}
 
-		// calculte shift for stacked graphs
+		// calculate shift for stacked graphs
 		if ($this->type == GRAPH_TYPE_STACKED) {
 			for ($i = 1; $i < $this->num; $i++) {
 				$curr_data = &$this->data[$this->items[$i]['itemid']][$this->items[$i]['calc_type']];
