@@ -72,6 +72,9 @@ function sysmapElementLabel($label = null) {
  * @return CAreaMap
  */
 function getActionMapBySysmap($sysmap, array $options = array()) {
+	$sysmap['selements'] = zbx_toHash($sysmap['selements'], 'selementid');
+	$sysmap['links'] = zbx_toHash($sysmap['links'], 'linkid');
+
 	$actionMap = new CAreaMap('links'.$sysmap['sysmapid']);
 
 	$areas = populateFromMapAreas($sysmap);
@@ -987,7 +990,7 @@ function getSelementsInfo($sysmap, array $options = array()) {
 		$hostsToGetInventories = array();
 	}
 
-	$selements = zbx_toHash($sysmap['selements'], 'selementid');
+	$selements = $sysmap['selements'];
 	foreach ($selements as $selementId => $selement) {
 		$selements[$selementId]['hosts'] = array();
 		$selements[$selementId]['triggers'] = array();
